<resources>
    <string name="app_name">All Gods Wallpapers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="snavigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="snavigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">All GODS Wallpapers</string>
    <string name="nav_header_subtitle">Version 1.0.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="shiv">Shiv Ji</string>
    <string name="ganesh">Ganesh Ji</string>
    <string name="krishan">Krishan Ji</string>
    <string name="hanuman">Hanuman Ji</string>
    <string name="ram">Shri Ram Ji</string>
    <string name="laxmi">Laxmi ji</string>
    <string name="saraswati">Saraswati Ji</string>
    <string name="vishnu">Vishnu Ji</string>
    <string name="shero_vali_mata">Shero vali Mata</string>
    <string name="brahma">Brahma Ji</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_fav">Fav</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_boo">boo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string-array name="text_arr">
        <item>Shiv Ji</item>
        <item>Ganesh Ji</item>
        <item>Krishan Ji</item>
        <item>Hanuman Ji</item>
        <item>Shri Ram Ji</item>
        <item>Laxmi Ji</item>
        <item>Saraswati Ji</item>
        <item>Vishnu ji</item>
        <item>SheroVali Mata</item>
        <item>Brahma Ji</item>
    </string-array>
</resources>